[package]
name = "flexi_func"
version = "0.2.7"
edition = "2021"
authors = ["Ahmad Hamdi"]
description = """
a Rust crate designed to supercharge your Rust programming experience with two powerful macros: ff (Flexi Func) and fb (Flexi Block) or (Function Builder) 🛠️.

These macros are crafted to simplify and enhance the way you write synchronous and asynchronous code, making your Rust journey smoother and more efficient.
"""
categories = ["asynchronous", "development-tools::procedural-macro-helpers", "parsing", "rust-patterns", "network-programming"]
license = "MIT"
repository = "https://github.com/theHamdiz/flexi_func"
readme = "README.md"


[dependencies]
syn = { version = "1.0.109", features = ["full"] }
quote = "1.0.9"
proc-macro2 = "1.0.27"
flexi_func_declarative = "0.2.7"
[lib]
proc-macro = true